[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/World/grasstileset.tres" type="TileSet" id=1]
[ext_resource path="res://Sound/Groovy's Retro Sound Effects/Impact/Impact4.wav" type="AudioStream" id=2]
[ext_resource path="res://Scenes/UI/PlayCutscenes/frame0000.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/PlayCutscenes/frame0001.png" type="Texture" id=4]
[ext_resource path="res://Scripts/World/World.gd" type="Script" id=5]
[ext_resource path="res://Scenes/World/BG/Fish.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/World/items/Sbone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/World/BG/Bubbles.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/World/items/Bbone.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sound/Groovy's Retro Sound Effects/Random/Random5.wav" type="AudioStream" id=11]
[ext_resource path="res://Scenes/World/grassitems.tres" type="TileSet" id=12]
[ext_resource path="res://Sound/BGSounds/SLOWER-TEMPO2019-12-09_-_Retro_Forest_-_David_Fesliyan.ogg" type="AudioStream" id=13]
[ext_resource path="res://Sound/Groovy's Retro Sound Effects/Misc/Error.wav" type="AudioStream" id=14]
[ext_resource path="res://Sound/Groovy's Retro Sound Effects/Hit_Hurt/Hit_Hurt1.wav" type="AudioStream" id=15]
[ext_resource path="res://Scenes/World/Stages/Paused.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/World/items/BG.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/World/items/NextLevel.tscn" type="PackedScene" id=18]
[ext_resource path="res://Sound/Groovy's Retro Sound Effects/Shoot/Shoot6.wav" type="AudioStream" id=20]
[ext_resource path="res://Scenes/World/npc.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/World/House.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scenes/Player/Health.tscn" type="PackedScene" id=23]
[ext_resource path="res://Scenes/World/underground.tres" type="TileSet" id=24]
[ext_resource path="res://Scenes/World/Alight.png" type="Texture" id=26]
[ext_resource path="res://Scenes/World/dialog2.png" type="Texture" id=28]
[ext_resource path="res://Scenes/World/npcsoldier.tscn" type="PackedScene" id=29]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 901.442, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": false,
"name": "wakeup",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -556, -8, 0, 0, 0, 0, -556, 28, 0, 0, 0, 0, -556, 50, 0, 0, 0, 0, -557, 64, 0, 0, 0, 0, -557, 7, 0, 0, 0, 0, -556, -8 )
}

[node name="World" type="Node2D"]
position = Vector2( 0, -3 )
script = ExtResource( 5 )
Fish = ExtResource( 6 )
Scene_name = "World"
health = ExtResource( 23 )

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( -571, 70 )

[node name="items" type="Node2D" parent="."]

[node name="FishTimer" type="Timer" parent="items"]

[node name="EndTimer" type="Timer" parent="items"]
wait_time = 2.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="items"]
stream = ExtResource( 13 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="items"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="items"]
stream = ExtResource( 2 )

[node name="bones" type="Node2D" parent="items"]
position = Vector2( 0.307358, 22.1298 )

[node name="Sbone" parent="items/bones" instance=ExtResource( 7 )]
position = Vector2( 58.2948, 15.433 )
rotation = -1.01578
z_index = -1

[node name="Sbone2" parent="items/bones" instance=ExtResource( 7 )]
position = Vector2( 241.501, -1.72466 )
rotation = -1.01578
z_index = -1

[node name="Sbone3" parent="items/bones" instance=ExtResource( 7 )]
position = Vector2( 659.836, 14.2298 )
rotation = 3.17301
z_index = -1

[node name="Bbone" parent="items/bones" instance=ExtResource( 9 )]
position = Vector2( 63.6926, 14.8702 )
rotation = -1.2706
z_index = -2

[node name="Bbone2" parent="items/bones" instance=ExtResource( 9 )]
position = Vector2( -18.3074, 26.8702 )
rotation = 1.7017
z_index = -2

[node name="Bbone3" parent="items/bones" instance=ExtResource( 9 )]
position = Vector2( 156.693, -7.1298 )
rotation = 1.7017
z_index = -1

[node name="Hurt" type="AudioStreamPlayer2D" parent="items"]
stream = ExtResource( 14 )

[node name="Hurt1" type="AudioStreamPlayer2D" parent="items"]
stream = ExtResource( 11 )

[node name="Hurt2" type="AudioStreamPlayer2D" parent="items"]
stream = ExtResource( 20 )
volume_db = -6.71

[node name="Bubbles" parent="items" instance=ExtResource( 8 )]
position = Vector2( 146.214, 87.3931 )

[node name="Bubbles2" parent="items" instance=ExtResource( 8 )]
position = Vector2( -22.9948, 90.952 )

[node name="Bubbles7" parent="items" instance=ExtResource( 8 )]
position = Vector2( -351.02, 121.088 )

[node name="Bubbles8" parent="items" instance=ExtResource( 8 )]
position = Vector2( -524.655, 116.897 )

[node name="grass" type="Node2D" parent="items"]

[node name="TileMap" type="TileMap" parent="items/grass"]
z_index = -2
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
format = 1
tile_data = PoolIntArray( -393291, 0, 0, -393290, 0, 1, -393289, 0, 3, -458743, 0, 0, -458742, 0, 3, -327756, 0, 0, -327755, 0, 65537, -327754, 0, 196610, -327753, 0, 196611, -393207, 0, 65536, -393206, 0, 65539, -262221, 0, 0, -262220, 0, 65537, -262219, 0, 196611, -327671, 0, 131072, -327670, 0, 131075, -196686, 0, 0, -196685, 0, 65537, -196684, 0, 196611, -262135, 0, 65536, -262134, 0, 65539, -131151, 0, 0, -131150, 0, 65537, -131149, 0, 196611, -196599, 0, 65536, -196598, 0, 131075, -65615, 0, 65536, -65614, 0, 131075, -131063, 0, 65536, -131062, 0, 65539, -79, 0, 65536, -78, 0, 131075, -11, 0, 0, -10, 0, 3, -65527, 0, 131072, -65526, 0, 131075, 65457, 0, 65536, 65458, 0, 131075, 65525, 0, 65536, 65526, 0, 65539, 8, 0, 0, 9, 0, 131076, 10, 0, 131075, 130993, 0, 196608, 130994, 0, 65537, 130995, 0, 3, 131061, 0, 65536, 131062, 0, 131075, 65544, 0, 131072, 65545, 0, 131073, 65546, 0, 131075, 196530, 0, 65536, 196531, 0, 131075, 196579, 0, 0, 196580, 0, 1, 196581, 0, 1, 196582, 0, 2, 196583, 0, 2, 196584, 0, 2, 196585, 0, 1, 196586, 0, 2, 196587, 0, 2, 196588, 0, 2, 196589, 0, 2, 196590, 0, 2, 196591, 0, 2, 196592, 0, 1, 196593, 0, 2, 196594, 0, 1, 196595, 0, 1, 196596, 0, 2, 196597, 0, 131076, 196598, 0, 131075, 196605, 0, 0, 196606, 0, 1, 196607, 0, 1, 131072, 0, 2, 131073, 0, 1, 131074, 0, 1, 131075, 0, 1, 131076, 0, 2, 131077, 0, 1, 131078, 0, 1, 131079, 0, 1, 131080, 0, 131076, 131081, 0, 131074, 131082, 0, 131075, 131087, 0, 0, 131088, 0, 2, 131089, 0, 2, 131090, 0, 2, 131091, 0, 2, 131092, 0, 1, 131093, 0, 2, 131094, 0, 3, 262066, 0, 65536, 262067, 0, 131075, 262111, 0, 0, 262112, 0, 3, 262115, 0, 131072, 262116, 0, 65537, 262117, 0, 65537, 262118, 0, 131073, 262119, 0, 131074, 262120, 0, 65538, 262121, 0, 131073, 262122, 0, 65537, 262123, 0, 131073, 262124, 0, 65538, 262125, 0, 65538, 262126, 0, 131074, 262127, 0, 65538, 262128, 0, 65537, 262129, 0, 131073, 262130, 0, 131073, 262131, 0, 131073, 262132, 0, 131073, 262133, 0, 65537, 262134, 0, 131075, 262141, 0, 196608, 262142, 0, 196612, 262143, 0, 65538, 196608, 0, 131073, 196609, 0, 131073, 196610, 0, 65537, 196611, 0, 196613, 196612, 0, 196609, 196613, 0, 196609, 196614, 0, 196610, 196615, 0, 196609, 196616, 0, 196612, 196617, 0, 131074, 196618, 0, 131075, 196623, 0, 131072, 196624, 0, 131073, 196625, 0, 131073, 196626, 0, 65538, 196627, 0, 65537, 196628, 0, 65538, 196629, 0, 131074, 196630, 0, 131075, 327602, 0, 65536, 327603, 0, 131075, 327647, 0, 131072, 327648, 0, 131077, 327649, 0, 1, 327650, 0, 2, 327651, 0, 131076, 327652, 0, 65538, 327653, 0, 65538, 327654, 0, 65538, 327655, 0, 65537, 327656, 0, 65538, 327657, 0, 65538, 327658, 0, 131074, 327659, 0, 131073, 327660, 0, 131073, 327661, 0, 65537, 327662, 0, 131074, 327663, 0, 65538, 327664, 0, 65537, 327665, 0, 65538, 327666, 0, 131073, 327667, 0, 65537, 327668, 0, 65538, 327669, 0, 131073, 327670, 0, 131077, 327671, 0, 1, 327672, 0, 1, 327673, 0, 2, 327674, 0, 1, 327675, 0, 3, 327678, 0, 196608, 327679, 0, 196610, 262144, 0, 196609, 262145, 0, 196610, 262146, 0, 196610, 262147, 0, 196611, 262152, 0, 131072, 262153, 0, 131074, 262154, 0, 131077, 262155, 0, 1, 262156, 0, 2, 262157, 0, 2, 262158, 0, 3, 262159, 0, 196608, 262160, 0, 196610, 262161, 0, 196610, 262162, 0, 196610, 262163, 0, 196610, 262164, 0, 196610, 262165, 0, 196609, 262166, 0, 196611, 393138, 0, 65536, 393139, 0, 65539, 393183, 0, 65536, 393184, 0, 131074, 393185, 0, 65537, 393186, 0, 131074, 393187, 0, 65537, 393188, 0, 131073, 393189, 0, 65538, 393190, 0, 65538, 393191, 0, 131074, 393192, 0, 131073, 393193, 0, 131073, 393194, 0, 131074, 393195, 0, 65538, 393196, 0, 131074, 393197, 0, 65538, 393198, 0, 65538, 393199, 0, 65538, 393200, 0, 65538, 393201, 0, 131073, 393202, 0, 65537, 393203, 0, 65538, 393204, 0, 131074, 393205, 0, 65537, 393206, 0, 131073, 393207, 0, 65538, 393208, 0, 131073, 393209, 0, 65538, 393210, 0, 65537, 393211, 0, 131075, 327688, 0, 65536, 327689, 0, 65538, 327690, 0, 65538, 327691, 0, 65537, 327692, 0, 131074, 327693, 0, 131074, 327694, 0, 65539, 458674, 0, 65536, 458675, 0, 65539, 458719, 0, 131072, 458720, 0, 65538, 458721, 0, 65538, 458722, 0, 65538, 458723, 0, 131074, 458724, 0, 131074, 458725, 0, 131074, 458726, 0, 65538, 458727, 0, 65538, 458728, 0, 65537, 458729, 0, 65538, 458730, 0, 131074, 458731, 0, 65538, 458732, 0, 131073, 458733, 0, 65537, 458734, 0, 131073, 458735, 0, 65538, 458736, 0, 131074, 458737, 0, 131074, 458738, 0, 65538, 458739, 0, 65537, 458740, 0, 65538, 458741, 0, 65538, 458742, 0, 131073, 458743, 0, 131073, 458744, 0, 65538, 458745, 0, 131073, 458746, 0, 131074, 458747, 0, 131077, 458748, 0, 1, 458749, 0, 1, 458750, 0, 3, 393224, 0, 131072, 393225, 0, 65538, 393226, 0, 131074, 393227, 0, 65537, 393228, 0, 65538, 393229, 0, 65538, 393230, 0, 65539, 524210, 0, 131072, 524211, 0, 131075, 524255, 0, 65536, 524256, 0, 131074, 524257, 0, 131073, 524258, 0, 65538, 524259, 0, 131074, 524260, 0, 65537, 524261, 0, 65537, 524262, 0, 65537, 524263, 0, 131073, 524264, 0, 65538, 524265, 0, 131073, 524266, 0, 65537, 524267, 0, 65537, 524268, 0, 65538, 524269, 0, 65537, 524270, 0, 65537, 524271, 0, 131074, 524272, 0, 65537, 524273, 0, 65538, 524274, 0, 131074, 524275, 0, 131074, 524276, 0, 65538, 524277, 0, 131074, 524278, 0, 65538, 524279, 0, 131074, 524280, 0, 65538, 524281, 0, 131074, 524282, 0, 131074, 524283, 0, 65537, 524284, 0, 131073, 524285, 0, 131074, 524286, 0, 131075, 458760, 0, 65536, 458761, 0, 131074, 458762, 0, 65538, 458763, 0, 65537, 458764, 0, 65538, 458765, 0, 131073, 458766, 0, 65539, 589746, 0, 65536, 589747, 0, 131077, 589748, 0, 1, 589749, 0, 2, 589750, 0, 3, 589787, 0, 0, 589788, 0, 2, 589789, 0, 1, 589790, 0, 2, 589791, 0, 131076, 589792, 0, 65538, 589793, 0, 131074, 589794, 0, 65537, 589795, 0, 131074, 589796, 0, 131074, 589797, 0, 196613, 589798, 0, 196609, 589799, 0, 196609, 589800, 0, 196610, 589801, 0, 196610, 589802, 0, 196609, 589803, 0, 196610, 589804, 0, 196610, 589805, 0, 196609, 589806, 0, 196609, 589807, 0, 196609, 589808, 0, 196610, 589809, 0, 196609, 589810, 0, 196610, 589811, 0, 196609, 589812, 0, 196609, 589813, 0, 196609, 589814, 0, 196609, 589815, 0, 196609, 589816, 0, 196612, 589817, 0, 65538, 589818, 0, 131073, 589819, 0, 65538, 589820, 0, 131073, 589821, 0, 65538, 589822, 0, 131077, 589823, 0, 3, 524295, 0, 0, 524296, 0, 131076, 524297, 0, 65538, 524298, 0, 131074, 524299, 0, 65537, 524300, 0, 131073, 524301, 0, 65538, 524302, 0, 131075, 655282, 0, 131072, 655283, 0, 131074, 655284, 0, 65537, 655285, 0, 131073, 655286, 0, 131077, 655287, 0, 2, 655288, 0, 2, 655289, 0, 2, 655290, 0, 2, 655291, 0, 2, 655292, 0, 2, 655293, 0, 1, 655294, 0, 1, 655295, 0, 1, 655296, 0, 1, 655297, 0, 1, 655298, 0, 2, 655299, 0, 1, 655300, 0, 1, 655301, 0, 1, 655302, 0, 2, 655303, 0, 1, 655304, 0, 1, 655305, 0, 2, 655306, 0, 1, 655307, 0, 2, 655308, 0, 2, 655309, 0, 2, 655310, 0, 2, 655311, 0, 1, 655312, 0, 2, 655313, 0, 2, 655314, 0, 1, 655315, 0, 1, 655316, 0, 1, 655317, 0, 2, 655318, 0, 1, 655319, 0, 2, 655320, 0, 1, 655321, 0, 2, 655322, 0, 2, 655323, 0, 131076, 655324, 0, 131073, 655325, 0, 65538, 655326, 0, 65538, 655327, 0, 65537, 655328, 0, 131073, 655329, 0, 131074, 655330, 0, 65537, 655331, 0, 65537, 655332, 0, 196613, 655333, 0, 196611, 655352, 0, 196608, 655353, 0, 196609, 655354, 0, 196610, 655355, 0, 196610, 655356, 0, 196612, 655357, 0, 131074, 655358, 0, 131074, 655359, 0, 131077, 589824, 0, 1, 589825, 0, 3, 589831, 0, 131072, 589832, 0, 131074, 589833, 0, 65538, 589834, 0, 65538, 589835, 0, 65537, 589836, 0, 131074, 589837, 0, 131074, 589838, 0, 65539, 720818, 0, 131072, 720819, 0, 65537, 720820, 0, 65537, 720821, 0, 65537, 720822, 0, 131074, 720823, 0, 131073, 720824, 0, 65537, 720825, 0, 65537, 720826, 0, 65538, 720827, 0, 65537, 720828, 0, 65538, 720829, 0, 65538, 720830, 0, 65537, 720831, 0, 131074, 720832, 0, 131074, 720833, 0, 65538, 720834, 0, 131074, 720835, 0, 131073, 720836, 0, 65537, 720837, 0, 65538, 720838, 0, 65537, 720839, 0, 65537, 720840, 0, 131074, 720841, 0, 131073, 720842, 0, 65538, 720843, 0, 131073, 720844, 0, 65537, 720845, 0, 65537, 720846, 0, 131074, 720847, 0, 65538, 720848, 0, 131074, 720849, 0, 131073, 720850, 0, 65537, 720851, 0, 65538, 720852, 0, 131074, 720853, 0, 65537, 720854, 0, 65537, 720855, 0, 65537, 720856, 0, 131074, 720857, 0, 131074, 720858, 0, 131073, 720859, 0, 65538, 720860, 0, 131074, 720861, 0, 131074, 720862, 0, 131073, 720863, 0, 131073, 720864, 0, 65537, 720865, 0, 65537, 720866, 0, 65537, 720867, 0, 196613, 720868, 0, 196611, 720892, 0, 65536, 720893, 0, 131074, 720894, 0, 131074, 720895, 0, 65537, 655360, 0, 65537, 655361, 0, 131077, 655362, 0, 1, 655363, 0, 2, 655364, 0, 1, 655365, 0, 2, 655366, 0, 1, 655367, 0, 131076, 655368, 0, 65537, 655369, 0, 131073, 655370, 0, 131074, 655371, 0, 131074, 655372, 0, 65538, 655373, 0, 131073, 655374, 0, 131075, 786354, 0, 65536, 786355, 0, 65538, 786356, 0, 65538, 786357, 0, 65537, 786358, 0, 65537, 786359, 0, 131073, 786360, 0, 65538, 786361, 0, 131074, 786362, 0, 131073, 786363, 0, 131074, 786364, 0, 65537, 786365, 0, 65538, 786366, 0, 65537, 786367, 0, 131074, 786368, 0, 65537, 786369, 0, 131074, 786370, 0, 131073, 786371, 0, 65537, 786372, 0, 131073, 786373, 0, 65538, 786374, 0, 131074, 786375, 0, 131074, 786376, 0, 131074, 786377, 0, 65538, 786378, 0, 131073, 786379, 0, 131074, 786380, 0, 131073, 786381, 0, 65538, 786382, 0, 65537, 786383, 0, 131073, 786384, 0, 131074, 786385, 0, 131073, 786386, 0, 131074, 786387, 0, 65538, 786388, 0, 131074, 786389, 0, 65538, 786390, 0, 131073, 786391, 0, 65537, 786392, 0, 131074, 786393, 0, 65537, 786394, 0, 65538, 786395, 0, 131074, 786396, 0, 131074, 786397, 0, 65538, 786398, 0, 65537, 786399, 0, 131074, 786400, 0, 65538, 786401, 0, 131074, 786402, 0, 196613, 786403, 0, 196611, 786428, 0, 131072, 786429, 0, 65537, 786430, 0, 131074, 786431, 0, 131074, 720896, 0, 131073, 720897, 0, 65538, 720898, 0, 131073, 720899, 0, 131074, 720900, 0, 131073, 720901, 0, 131073, 720902, 0, 65537, 720903, 0, 131073, 720904, 0, 65537, 720905, 0, 65538, 720906, 0, 131073, 720907, 0, 65537, 720908, 0, 131073, 720909, 0, 131074, 720910, 0, 131075, 851890, 0, 65536, 851891, 0, 131073, 851892, 0, 131074, 851893, 0, 131073, 851894, 0, 131073, 851895, 0, 65538, 851896, 0, 65537, 851897, 0, 131073, 851898, 0, 65538, 851899, 0, 131074, 851900, 0, 65537, 851901, 0, 131074, 851902, 0, 131073, 851903, 0, 131073, 851904, 0, 131074, 851905, 0, 65537, 851906, 0, 131073, 851907, 0, 131074, 851908, 0, 65537, 851909, 0, 65537, 851910, 0, 131073, 851911, 0, 65538, 851912, 0, 131073, 851913, 0, 65537, 851914, 0, 131074, 851915, 0, 65537, 851916, 0, 131074, 851917, 0, 131073, 851918, 0, 131073, 851919, 0, 131073, 851920, 0, 131074, 851921, 0, 131073, 851922, 0, 65537, 851923, 0, 131074, 851924, 0, 131074, 851925, 0, 131073, 851926, 0, 65537, 851927, 0, 131073, 851928, 0, 65538, 851929, 0, 65537, 851930, 0, 131073, 851931, 0, 65538, 851932, 0, 65537, 851933, 0, 131073, 851934, 0, 65538, 851935, 0, 65538, 851936, 0, 65537, 851937, 0, 196613, 851938, 0, 196611, 851964, 0, 131072, 851965, 0, 65538, 851966, 0, 65537, 851967, 0, 131074, 786432, 0, 131074, 786433, 0, 65537, 786434, 0, 131074, 786435, 0, 65538, 786436, 0, 65537, 786437, 0, 65538, 786438, 0, 131073, 786439, 0, 131073, 786440, 0, 131074, 786441, 0, 65538, 786442, 0, 65538, 786443, 0, 65537, 786444, 0, 65538, 786445, 0, 131074, 786446, 0, 131075, 917426, 0, 196608, 917427, 0, 196612, 917428, 0, 65537, 917429, 0, 65537, 917430, 0, 65538, 917431, 0, 131074, 917432, 0, 131073, 917433, 0, 131074, 917434, 0, 65537, 917435, 0, 131073, 917436, 0, 65537, 917437, 0, 131073, 917438, 0, 131073, 917439, 0, 65538, 917440, 0, 131073, 917441, 0, 131074, 917442, 0, 65538, 917443, 0, 131074, 917444, 0, 65537, 917445, 0, 131074, 917446, 0, 131074, 917447, 0, 131073, 917448, 0, 131073, 917449, 0, 65537, 917450, 0, 65537, 917451, 0, 131074, 917452, 0, 131074, 917453, 0, 65537, 917454, 0, 131073, 917455, 0, 131074, 917456, 0, 131073, 917457, 0, 131074, 917458, 0, 131074, 917459, 0, 65538, 917460, 0, 131073, 917461, 0, 65538, 917462, 0, 131073, 917463, 0, 65537, 917464, 0, 131074, 917465, 0, 65537, 917466, 0, 131074, 917467, 0, 131073, 917468, 0, 131074, 917469, 0, 131073, 917470, 0, 131074, 917471, 0, 65537, 917472, 0, 196613, 917473, 0, 196611, 917500, 0, 131072, 917501, 0, 131073, 917502, 0, 131073, 917503, 0, 65538, 851968, 0, 65538, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 131074, 851972, 0, 65538, 851973, 0, 65538, 851974, 0, 131074, 851975, 0, 131073, 851976, 0, 131073, 851977, 0, 65538, 851978, 0, 131073, 851979, 0, 131074, 851980, 0, 65537, 851981, 0, 131073, 851982, 0, 65539, 982963, 0, 196608, 982964, 0, 196610, 982965, 0, 196609, 982966, 0, 196610, 982967, 0, 196609, 982968, 0, 196609, 982969, 0, 196612, 982970, 0, 131073, 982971, 0, 65538, 982972, 0, 131074, 982973, 0, 131073, 982974, 0, 131073, 982975, 0, 131073, 982976, 0, 131073, 982977, 0, 65537, 982978, 0, 131073, 982979, 0, 65538, 982980, 0, 65538, 982981, 0, 131073, 982982, 0, 65537, 982983, 0, 131074, 982984, 0, 131074, 982985, 0, 131074, 982986, 0, 131073, 982987, 0, 65538, 982988, 0, 131074, 982989, 0, 131074, 982990, 0, 65538, 982991, 0, 65537, 982992, 0, 65537, 982993, 0, 196613, 982994, 0, 196609, 982995, 0, 196609, 982996, 0, 196609, 982997, 0, 196610, 982998, 0, 196609, 982999, 0, 196610, 983000, 0, 196610, 983001, 0, 196610, 983002, 0, 196610, 983003, 0, 196610, 983004, 0, 196609, 983005, 0, 196610, 983006, 0, 196610, 983007, 0, 196610, 983008, 0, 196611, 983036, 0, 65536, 983037, 0, 65537, 983038, 0, 65538, 983039, 0, 65538, 917504, 0, 131073, 917505, 0, 131074, 917506, 0, 131074, 917507, 0, 131074, 917508, 0, 131073, 917509, 0, 131074, 917510, 0, 131073, 917511, 0, 65538, 917512, 0, 65537, 917513, 0, 65537, 917514, 0, 131074, 917515, 0, 131074, 917516, 0, 65537, 917517, 0, 65537, 917518, 0, 65539, 1048505, 0, 196608, 1048506, 0, 196609, 1048507, 0, 196610, 1048508, 0, 196610, 1048509, 0, 196610, 1048510, 0, 196610, 1048511, 0, 196610, 1048512, 0, 196610, 1048513, 0, 196609, 1048514, 0, 196609, 1048515, 0, 196610, 1048516, 0, 196610, 1048517, 0, 196610, 1048518, 0, 196609, 1048519, 0, 196610, 1048520, 0, 196609, 1048521, 0, 196609, 1048522, 0, 196610, 1048523, 0, 196610, 1048524, 0, 196610, 1048525, 0, 196609, 1048526, 0, 196610, 1048527, 0, 196609, 1048528, 0, 196610, 1048529, 0, 196611, 1048572, 0, 196608, 1048573, 0, 196610, 1048574, 0, 196610, 1048575, 0, 196610, 983040, 0, 196610, 983041, 0, 196609, 983042, 0, 196610, 983043, 0, 196610, 983044, 0, 196609, 983045, 0, 196610, 983046, 0, 196610, 983047, 0, 196610, 983048, 0, 196610, 983049, 0, 196610, 983050, 0, 196610, 983051, 0, 196609, 983052, 0, 196610, 983053, 0, 196609, 983054, 0, 196611 )

[node name="TileMap2" type="TileMap" parent="items/grass"]
z_index = -1
tile_set = ExtResource( 12 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
format = 1
tile_data = PoolIntArray( 131069, 1, 0, 65541, 0, 0, 65543, 3, 0, 65544, 1, 0, 262136, 0, 0, 524219, 2, 0, 524287, 3, 0, 458759, 3, 0, 589750, 1, 0, 589753, 1, 0, 589758, 3, 0, 589765, 0, 0, 589768, 0, 0, 589774, 3, 0, 589775, 3, 0, 589781, 1, 0, 589827, 0, 0 )

[node name="underground" type="Node2D" parent="items"]

[node name="TileMap3" type="TileMap" parent="items/underground"]
z_index = -1
tile_set = ExtResource( 24 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
format = 1

[node name="Light2D" type="Light2D" parent="items/underground"]
position = Vector2( 157, 113 )
rotation = 3.14159
texture = ExtResource( 26 )
energy = 2.0

[node name="BG" parent="items" instance=ExtResource( 17 )]
position = Vector2( -130, 1 )

[node name="BG3" parent="items" instance=ExtResource( 17 )]
position = Vector2( -327, 56 )

[node name="BG2" parent="items" instance=ExtResource( 17 )]
position = Vector2( -126, 2 )

[node name="AnimatedSprite" parent="items/BG2" index="0"]
position = Vector2( 141, 21 )
animation = "eel"
frame = 1

[node name="BG4" parent="items" instance=ExtResource( 17 )]
position = Vector2( -705, 17 )

[node name="AnimatedSprite" parent="items/BG4" index="0"]
position = Vector2( 141, 21 )
animation = "eel"

[node name="BG5" parent="items" instance=ExtResource( 17 )]
position = Vector2( -526, 5 )

[node name="AnimatedSprite" parent="items/BG5" index="0"]
position = Vector2( 142, 21 )
animation = "eel"
frame = 1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 155.143, 178.094 )
collision_layer = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="UI" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="UI"]
visible = false
frames = SubResource( 2 )
animation = "wakeup"
frame = 3
playing = true

[node name="Enemies" type="Node2D" parent="."]

[node name="NextLevel3" parent="." instance=ExtResource( 18 )]
position = Vector2( 59, 11 )
next_scene = "res://Scenes/World/Stages/Level2.tscn"

[node name="NextLevel2" parent="." instance=ExtResource( 18 )]
position = Vector2( -600, 60 )
next_scene = "res://Scenes/World/Stages/Stone.tscn"

[node name="House" parent="." instance=ExtResource( 22 )]
position = Vector2( -455, 11 )

[node name="Area2D" parent="House" instance=ExtResource( 21 )]
position = Vector2( 1, 58 )
z_index = -1

[node name="Area2D2" parent="House" instance=ExtResource( 29 )]
position = Vector2( 239, 1 )
z_index = -1

[node name="Sprite" parent="House/Area2D2" index="1"]
position = Vector2( -2, 1 )
region_rect = Rect2( 9.69877, 35.9297, 10.6665, 7.58222 )

[node name="Sprite2" parent="House/Area2D2" index="2"]
texture = ExtResource( 28 )

[node name="Camera2D" parent="House/Area2D2" index="3"]
pause_mode = 2

[node name="Control" parent="House/Area2D2" index="4"]
visible = false
position = Vector2( 1, -18 )

[node name="TextureButton" parent="House/Area2D2/Control" index="0"]
position = Vector2( 41, 14 )

[node name="TextureButton2" parent="House/Area2D2/Control" index="1"]
position = Vector2( 38, 24 )

[node name="TextureButton3" parent="House/Area2D2/Control" index="2"]
position = Vector2( -54, 24 )

[node name="TextureButton4" parent="House/Area2D2/Control" index="3"]
position = Vector2( 39, 1 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -556, -5.23917 )
rotation = 1.5708
offset = 3.0

[node name="Paused" parent="." instance=ExtResource( 16 )]
visible = false
[connection signal="get_hit" from="Player" to="." method="_on_Player_get_hit"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="items/FishTimer" to="." method="_on_FishTimer_timeout"]
[connection signal="timeout" from="items/EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="UI/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[editable path="items/BG2"]

[editable path="items/BG4"]

[editable path="items/BG5"]

[editable path="House/Area2D2"]

[editable path="House/Area2D2/Control"]
